<resources>
    <string name="app_name">Armor Assets</string>
    <string name="image_armor_type">Image representing armor type</string>
    <string name="armor_name">Item Name</string>
    <string name="rank_text">low</string>
    <string name="base_defense_text">31</string>
    <string name="slots_text">Slots</string>
    <string name="filter_view_hint">Filter Armor</string>
    <string name="slots_place_holder">1</string>
</resources>